1) AlertUtil 스프링 형태로 수정 2) 리스트, 작성(Post 미완), 수정(post 미완), 뷰 구현