@@ -1,26 +1,20 @@
 package com.gitbaby.happygivers.util;
 
 import lombok.extern.slf4j.Slf4j;
-
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
+import org.springframework.ui.Model;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Slf4j
 public class AlertUtil {
-  public static void alert(String msg, String url, HttpServletRequest req, HttpServletResponse resp) throws IOException, ServletException {
-    req.setAttribute("msg", msg);
-    req.setAttribute("url", req.getContextPath() + url);
-    req.getRequestDispatcher("/WEB-INF/views/common/alert.jsp").forward(req, resp);
+  public static String alert(String msg, String url, Model model) {
+    model.addAttribute("msg", msg);
+    model.addAttribute("url", url);
+    return "common/alert"; // view 이름만 반환
   }
 
-  public static void alert(String msg, String url, HttpServletRequest req, HttpServletResponse resp, boolean isUrl) throws IOException, ServletException {
-    if (isUrl) {
-      url = url + "&url=" + URLEncoder.encode(req.getRequestURL().toString(), "utf-8");
-    }
-    log.info("{}", url);
-    alert(msg, url, req, resp);
+  public static String alert(String msg, String url, String returnUrl, Model model) {
+    String encoded = URLEncoder.encode(returnUrl, StandardCharsets.UTF_8);
+    return alert(msg, url + "&url=" + encoded, model);
   }
 }
